# google_backup_checker

./: pyproject.toml  setup.py
google_backup_checker/: hooks.py  modules.txt  setup.py
google_backup_checker/config/: desktop.py
google_backup_checker/doctype/google_backup_checker_settings/: google_backup_checker_settings.json
google_backup_checker/events/: backup_trigger.py
google_backup_checker/google_backup_checker/: hooks.py
google_backup_checker/google_backup_checker/doctype/kuma_url_config/: kuma_url_config.json
google_backup_checker/google_backup_checker/public/: build.json
google_backup_checker/google_backup_checker/public/js/: google_backup_checker.js
