[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google_backup_checker"
version = "0.0.1"
description = "A backend-only Frappe app to monitor Google backups"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["frappe>=15.0.0"]